Passwordless Login 2.0.0
--------------------------------------------------------------------------------
- Removed cookie which remembers the last logged in user
+ Support for resident keys
+ Support for passkeys (synchronised authenticators)
+ Support for TouchID/FaceID on newer Apple mobile devices (iOS 15.4+)
+ User-controlled option to disable logins with password

Passwordless Login 1.0.1
--------------------------------------------------------------------------------
+ Support for platform authenticators (Windows Hello, TouchID/FaceID, Android biometrics, ...)
+ Remembers the last logged in user so you don't have to type in the username all the time
~ No need to pass URLs to the frontend

Passwordless Login 1.0.0
--------------------------------------------------------------------------------
Initial version