@@ -14,6 +14,8 @@ PLG_SYSTEM_PASSWORDLESS_FIELD_SHOWIMAGES_DESC="Should I display the logo of the 
 PLG_SYSTEM_PASSWORDLESS_FIELD_ALLOWRESIDENT_LABEL="Allow Passkeys"
 PLG_SYSTEM_PASSWORDLESS_FIELD_ALLOWRESIDENT_DESC="Should the user be allowed to register and use Passkeys? Passkeys are authenticator credentials with attached user information stored on the user's authenticator device. They allow the user to log into the site without using a username and password (as opposed to having to type their username). The downside is that most hardware authenticators can only store a limited number of passkeys — typically just 5 to 20. On the other hand, built-in authenticators like Windows Hello and Apple Passkeys on iCloud Keychain have no storage limit and offer a much better user experience. Note: Disabling this option will reject any login attempt without a username and password."
 
+PLG_SYSTEM_PASSWORDLESS_FIELD_JOOMLAWEBAUTHN_LABEL="Auto-migrate Joomla WebAuthn credentials"
+PLG_SYSTEM_PASSWORDLESS_FIELD_JOOMLAWEBAUTHN_DESC="Set to Yes and save the plugin to automatically migrate authenticators registered with Joomla's built-in ‘System - WebAuthn Passwordless Login’ plugin.<br/><strong>IMPORTANT INFORMATION</strong>: Set to Yes and click on Save. When the page reloads the option will appear again as No. <strong>This is normal and expected!</strong>. When you set to Yes and Save the plugin will do the following: move all entries from the WebAuthn plugin's storage (<code>#__webauthn_authenticators</code> database table) to the Passwordless plugin's storage (<code>#__passwordless_authenticators</code> database table); unpublish Joomla's WebAuthn; <em>reset this option back to No</em>."
 
 PLG_SYSTEM_PASSWORDLESS_LOGIN_LABEL="Passwordless Login"
 PLG_SYSTEM_PASSWORDLESS_LOGIN_DESC="Login without a password using the W3C Web Authentication standard. You need to have already set up passwordless authentication in your user profile."
