@@ -92,8 +92,8 @@
                         filter="integer"
                         showon="attestationSupport:1"
                 >
-                    <option value="0">JDISABLED</option>
-                    <option value="1">JENABLED</option>
+                    <option value="0">JNO</option>
+                    <option value="1">JYES</option>
                 </field>
 
                 <field
@@ -105,8 +105,21 @@
                         default="1"
                         filter="integer"
                 >
-                    <option value="0">JDISABLED</option>
-                    <option value="1">JENABLED</option>
+                    <option value="0">JNO</option>
+                    <option value="1">JYES</option>
+                </field>
+
+                <field
+                        name="joomlaWebauthn"
+                        type="radio"
+                        layout="joomla.form.field.radio.switcher"
+                        label="PLG_SYSTEM_PASSWORDLESS_FIELD_JOOMLAWEBAUTHN_LABEL"
+                        description="PLG_SYSTEM_PASSWORDLESS_FIELD_JOOMLAWEBAUTHN_DESC"
+                        default="0"
+                        filter="integer"
+                >
+                    <option value="0">JNO</option>
+                    <option value="1">JYES</option>
                 </field>
 
             </fieldset>
